--- a/Paper/exchange_rates.tex
+++ b/Paper/exchange_rates.tex
@@ -198,17 +198,17 @@ Exchange rate models must consider three important factors: which variables to i
 Selecting which variables to include in the model requires deciding which economic factors are relevant and for how many months prior to the current observation. To recap, the variables in the data set include the current exchange rate, interest rate, inflation rate and GDP growth rate for both countries, as well as several variables related to international financial flows. There is a strong theoretical justification for including each of these variables in the model. However, the number of potential predictors makes overfitting problematic, especially after the inclusion of lagged variables. We dealt with the problems of selecting the a good set of predictors and an appropriate lag simultaneously by applying the following procedure. We assessed the performance of different lags by comparing the performance of a linear regression model across a variety of lags. For each lag, the variables were chosen by forward stepwise variable selection, using AIC as the selection criteria. This technique produces a model that balances the trade off between training error and model complexity.
 
 \subsection{Candidate Methods}
-After selecting a suitable subset of variables to include in the model, we fit the model using several statistical techniques. Two families of models were considered: linear models and tree based methods. The advantage of the linear models is that they are simpler, but still powerful if they account for the structure of the time series properly. Tree based methods are considered as an alternative because of the high dimensional feature space. Since there are theoretical reasons to believe that each variable is important, ensemble methods based on the input may provide superior results.
+After selecting a suitable subset of variables to include in the model, we fit the model using several statistical techniques. Two families of models were considered: linear models and tree based methods. The advantage of the linear models is that they are simpler, but still powerful if they account for the structure of the time series properly. Tree based methods are considered as an alternative because of the high dimensional feature space. Since there are theoretical reasons to believe that each variable is important, ensemble methods that vary the input variables may provide superior results.
 
-\par{} The linear models include standard linear regression, ridge regression, LASSO regression and principal components regression. Ridge regression and LASSO regression both include a regularization constant that gives preferences to models with smaller parameters in terms of absolute value. These models are appealing for the exchange rate data set because autocorrelation and the inclusion of lagged variables means the predictors in the model are highly correlated. Including a regularization constant helps prevent overfitting to the training data. For both of these models, the regularization constant is chosen using generalized cross validation. Principal component regression is potentially useful due to the large number of predictors in the model and the high correlation between those predictors. The forward stepwise variable selection technique described above results in models with 15-20 predictors, which is relatively complex for a data set that has on the order of hundreds of observations. Principal component regression simplifies the model by considering a low rank approximation of the data set that consists of the $k$ most important principal components. The number of components to include in the principal component regression was also chosen using cross validation. 
+\par{} The linear models include standard linear regression, ridge regression, LASSO regression and principal components regression. Ridge regression and LASSO regression both include a regularization constant that gives preferences to models with smaller parameters in terms of absolute value. These models are appealing for the exchange rate data set because autocorrelation and the inclusion of lagged variables means the predictors in the model are highly correlated. Including a regularization constant helps prevent overfitting to the training data. For both of these models, the regularization constant is chosen using generalized cross validation. Principal component regression is potentially useful due to the large number of predictors in the model and the high correlation between those predictors. The forward stepwise variable selection technique described above results in models with 15-20 predictors, which is relatively complex for a data set that has on the order of hundreds of observations. Principal component regression simplifies the model by considering a low rank approximation of the data set that consists of the $k$ most important principal components. The number of components to include in the principal component regression was also chosen using cross validation. As noted above, the data set for each country can be well approximated with nine principal components when a nine month lag is used. This preliminary results suggests that principal component regression may be a suitable approach for this problem.
 
 \par{} Three tree based methods are considered: full tree models, pruned tree models, and random forests. Regression trees are capable of capturing non-linear interactions between the predictors. Since the feature space for the exchange rate problem is highly interdependent and large relative to the size of the data set, tree based methods are a reasonable option to consider. Instead of using nonlinear regression, regression trees recursively partition the data. A separate model is fit for each partition. Tree based methods predict future outcomes by classifying new data into one of the partitions, and then applying the appropriate model. Each partition is represented by the nodes, or leaves, of the tree. 
 
-\par{} Overfitting is a common concern with tree based methods. Pruning the tree is frequently used to help avoid overfitting. A tree is pruned by looking at the terminal nodes of the tree and determining if merging these nodes can decrease the entropy of the parent node. If so, the nodes are merged. Another way to avoid overfitting is to use random forests. Random forests take an ensemble of trees and return the average output of all the trees in the ensemble as the predicted value. This method avoids the high bias that is generally associated with full tree models.
+\par{} Overfitting is a common concern with tree based methods. Pruning the tree is frequently used to help avoid overfitting. A tree is pruned by looking at the terminal nodes of the tree and determining if merging those nodes can decrease the entropy of the parent node. If so, the nodes are merged. Another way to avoid overfitting is to use random forests. Random forests take an ensemble of trees and return the average output of all the trees in the ensemble as the predicted value. This method avoids the high bias that is generally associated with full tree models.
 
 \subsection{Model Evaluation}
-Evaluating the effectiveness each model requires splitting the data into training and test sets. In all cases described in this paper, the training set consists of 80\% of the available data, with the remaining allocated to the test set. The technique for splitting the data must account for two significant issues: autocorrelation and the size of the data set.
-\par{} As discussed above, the data set used in this paper exhibits autocorrelation that remains significant for at least several months. Since the economic variables in the data set are heavily correlated over time, this means that the data set cannot be split between training and test sets simply by separating the data randomly. In order to circumvent this problem, the test set was chosen by selecting a continuous block of time with a random start date. Additionally, six months of data before and after the test block was discarded. This data was used in neither the training nor the test set in order to ensure that the observations in the test set were as independent as possible from the observations in the training set. This means that, for most random start dates, a model will be evaluated by looking at its performance on a test set that contains observations that occurred before many of the observations that were used to train the model. Since the time series is a stationary process, this is not problematic because the joint distribution of the observations does not depend on time. As a result, the test block is independent of the training block, as long as we properly account for autocorrelation, this method is a valid technique for evaluating the performance of the models.
+Evaluating the effectiveness of each model requires splitting the data into training and test sets. In this paper, the training set consists of 80\% of the available data, with the remaining allocated to the test set. The technique for splitting the data must account for two significant issues: autocorrelation and the size of the data set.
+\par{} As discussed above, the data set used in this paper exhibits autocorrelation that remains significant for at least several months. Since the economic variables in the data set are heavily correlated over time, this means that we cannot simply split the data randomly between the training and test set. In order to circumvent this problem, the test set was chosen by selecting a continuous block of time with a random start date. Additionally, six months of data before and after the test block was discarded. This data was used in neither the training nor the test set in order to ensure that the observations in the test set were as independent as possible from the observations in the training set. This means that, for most random start dates, a model will be evaluated based on a test set that contains observations from the past. Since the time series is a stationary process, this is not problematic because the joint distribution of the observations does not depend on time. As a result, the test block is independent of the training block, as long as we properly account for autocorrelation. Independence between the training and test sets makes this method a valid technique for evaluating the performance of the models.
 \par{} Since the time series consists of monthly data, the number of observations in each data set is on the order of hundreds, ranging from 121 for Mexico to 459 for Japan. Due to the relatively low number of observations in the data set, we must test the performance of the model over a large number of random partitions. In order to accomplish this, we randomly selected 100 start points for each data set and computed the training error for each method at each start point. The same 100 start points were used for each method. This allows us to test the hypothesis that one method outperforms another by conducting a pairwise two sample t-test. Using many randomly selected start dates has the added advantage of providing more variability for the test sets. Since continuous blocks of time are correlated, the idiosyncrasies of any given training or test block may skew the results. This makes choosing tests sets with many randomly selected start points a reasonable method for partitioning the data set.
 \par{} The mean squared testing error over the 100 random partitions of the data set is used as a basis for comparing the models. For brevity, we will refer to this value as the mean testing error for the remainder of the paper. In all cases, two sample t-tests are used to determine whether the difference between two models is statistically significant. Comparison against a random walk, which predicts no change in the exchange rate after one year, is used as a benchmark for determining whether or not the model's predictions are useful.
 
@@ -247,7 +247,7 @@ An exchange rate prediction model was fitted for each of the methods described a
 %\label{fig:ForestLag2}
 %\end{figure}
 
-We determined an appropriate lag by comparing the performance of a standard linear regression model across a variety of lags. In order to find the simplest model specification that provides accurate predictions, we chose the lag by finding the point at which including an additional month of lag stops improving the performance of the model. We accomplished this by plotting the mean training error of the model as a function of the lag for each country. These plots appear in Figures ~\ref{fig:lag1} and ~\ref{fig:lag2}. %, ~\ref{fig:ForestLag1}, and ~\ref{fig:ForestLag2}. 
+We determined an appropriate lag by comparing the performance of a standard linear regression model across a variety of lags. In order to find the simplest model specification that provides accurate predictions, we chose the lag by looking for the point at which including an additional month of lag stops improving the performance of the model. To do this, we plotted the mean training error of the model as a function of the lag for each country. These plots appear in Figures ~\ref{fig:lag1} and ~\ref{fig:lag2}. %, ~\ref{fig:ForestLag1}, and ~\ref{fig:ForestLag2}. 
 
 \par{} The appropriate lag varies by country for linear models. Noticeable improvements in the performance of the model cease after month four for Canada and month five for Mexico. The results justify including lagged variables out to nine months for Europe, Japan and Korea. In the case of Korea, the decision to include a lengthy lag on the variables is less clear cut, since the model also performs well with shorter lags. However, the mean testing error decreases by a factor of two after the ninth month is included, making the increased complexity of the model worthwhile.
 \par{} Including lagged variables results in a large number of possible predictors for each model. Using the lags chosen above, there are 42 possible predictors for the Canada model, 49 for the Mexico model and 77 each for the Europe, Japan and Korea models. The variables used to predict the percent change in the exchange rate were chosen by forward stepwise variable selection, as described in the methods section. These variables and their lags appear in the appendix. Of note is that at least 9 of the 12 variables in the data set appear in each of the final models chosen by forward stepwise variable selection. In addition, each variable appeared in at least two of the models. This indicates that each variable is useful as a predictor of exchange rates, as economic theory suggests they should be.
@@ -271,8 +271,8 @@ Korea	& 0.00291 	& 0.00293 	& 0.00310 	& 0.00251 	& 0.0128 \\
 
 
 
-The mean testing errors for the 100 random partitions of the data set appear in Figure~\ref{tab:comparison} for each country and estimation technique. The naive estimate is a random walk and always predicts no change in the exchange rate after one year. This estimate is used as a baseline for assessing the usefulness of the statistical models. Each of the estimation techniques outperformed the random walk. The improvement in mean testing error ranged from a factor of two for Japan to a factor of ten for Mexico. For each method, we tested the hypothesis that the mean testing error for the model is less than the mean testing error for the random walk using a pairwise two sample t-test. The results were statistically significant at well below the 1\% significance level in each case.
-\par{} A noteworthy observation from the results table is that the mean testing error does not change much when different techniques are used to estimate the model. For each country, we tested the hypothesis that the mean testing errors for the ridge, LASSO and principal component regressions were different than the mean testing error for the standard linear model. Although the differences were statistically significant in some cases, the magnitude of the difference was very small in every case. In practice, this means that each of the models will produce similar results. Since using more sophisticated regression techniques does not improve the performance of the model, these results support estimating the model using a standard linear regression. In fact, the primary difficulty in producing a good model is not selecting the best estimation technique, but rather choosing the correct predictors. While the results were robust to the estimation technique, they were highly sensitive to the variables included in the model, particularly the months of lag. This makes preliminary work to determine a close to optimal lag vital to producing a useful model.
+The mean testing errors for the 100 random partitions of the data set appear in Figure~\ref{tab:comparison} for each country and linear estimation technique. The naive estimate is a random walk and always predicts no change in the exchange rate after one year. This estimate is used as a baseline for assessing the usefulness of the statistical models. Each of the estimation techniques outperformed the random walk. The improvement in mean testing error ranged from a factor of two for Japan to a factor of ten for Mexico. For each method, we tested the hypothesis that the mean testing error for the model is less than the mean testing error for the random walk using a pairwise two sample t-test. The results were statistically significant at well below the 1\% significance level in each case.
+\par{} A noteworthy observation from the results table is that the mean testing error does not change much when different linear techniques are used to estimate the model. For each country, we tested the hypothesis that the mean testing errors for the ridge, LASSO and principal component regressions were different than the mean testing error for the standard linear model. Although the differences were statistically significant in some cases, the magnitude of the difference was very small in every case. In practice, this means that each of the models will produce similar results. Since using more sophisticated regression techniques does not improve the performance of the model, these results support estimating the model using a standard linear regression. In fact, the primary difficulty in producing a good model is not selecting the best estimation technique, but rather choosing the correct predictors. While the results were robust to the estimation technique, they were highly sensitive to the variables included in the model, particularly the months of lag. This makes preliminary work to determine a close to optimal lag vital to producing a useful model.
 
 \begin{figure}
 \centering
@@ -288,15 +288,14 @@ Korea	& 0.01053 	& 0.01001 	& 0.00717	& 0.0128 \\
 \label{tab:treecomparison}
 \end{figure} 
 
-\par{} In contrast to linear models the changes in the lag did not decrease error in the same way for tree based models. It seems the change in error was random for the tree based models as lag variables were added. The change in error only varied slightly when lagged variables were added. The tree based models also performed slightly worse than the linear models. The final tree based models were estimated using the same variables as the final linear models. Figure~\ref{tab:treecomparison} presents the results from these tests. The random forest model gave the best result of the  tree based methods. This model outperformed the random walk for all trading partners except for Europe. For Japan, it only outperformed a random walk by a small margin. The other tree based methods performed worse than the random walk for most countries. Full tree models and pruned tree models only out performed a random walk for Mexico and Korea, but the margins were not statistically significant. In general, tree based methods proved less effective than linear models for predicting exchange rates.
-%not greater than 0.5\%.   
+\par{} In contrast to linear models, changing the lag did not decrease the testing error for the tree based models. The tree based models also performed slightly worse than the linear models. The final tree based models were estimated using the same variables as the final linear models. However, none of the tree based methods were very sensitive to the variables included in the model. Figure~\ref{tab:treecomparison} shows the results for each country and method. The random forest model gave the best result of the  tree based methods. This model outperformed the random walk for all trading partners except for Europe. For Japan, it only outperformed a random walk by a small margin. In all cases, random forests performed worse than linear methods by up to an order of magnitude. The other tree based methods performed worse than the random walk for most countries. Full tree models and pruned tree models only out performed a random walk for Mexico and Korea, but the margins were not statistically significant. In general, tree based methods proved less effective than linear models for predicting exchange rates. It is possible that the reason tree based methods do not perform well is because, even though there are a large number of possible predictors, they can be approximated by a small number of principal components. This makes it difficult for decision trees to partition the data set in a way that is useful for prediction. In general, empirical evidence shows that tree based methods are not competitive with linear methods in low dimensional feature spaces. The results in this paper are consistent with these observations.
 
 
 \section{Findings}
 
-This paper shows that it is possible to predict the percent change in the exchange rate after one year, using macroeconomic indicators as predictors. Each of the linear models outperformed a random walk, which is used as a baseline for assessing the usefulness of exchange rate models. This result held for each country we considered. In addition, the results show that the predictions do not change substantially when different estimation techniques are used. Instead, they are sensitive the which variables are used as input. This makes choosing an appropriate lag and performing proper variable selection a vital step in producing a good model.
+This paper shows that it is possible to predict the percent change in the exchange rate after one year, using macroeconomic indicators as predictors. In this paper, we considered both linear models and tree based methods. Each of the linear models outperformed a random walk, which is used as a baseline for assessing the usefulness of exchange rate models. This result held for each country we considered. In addition, the results show that the predictions for do not change substantially when different linear estimation techniques are used. Instead, they are sensitive the which variables are used as input. This makes choosing an appropriate lag and performing proper variable selection a vital step in producing a good model. In contrast, tree based methods were not sensitive to changes in the input variables. Despite being less sensitive, they performed considerably worse than linear models, although they did outperform a random walk. In all the evidence suggests that linear methods that carefully account for the nature of the time series are the best option for predicting exchange rates.
 
-The model performs well enough that it could have a significant impact on business decisions. Writing the exchange rate values implied by the model into medium term contracts instead of the current exchange could substantially reduce the risk of conducting business internationally. A Mexican manufacturer might expect to save roughly \$70,000 on a \$1,000,000 contract with an American buyer, solely due to avoiding adverse currency movements. Clearly, accurately predicting exchange rates can help business leaders make more informed decisions.
+Linear models perform well enough that they could have a significant impact on business decisions. Writing the exchange rate values implied by the model into medium term contracts instead of the current exchange could substantially reduce the risk of conducting business internationally. A Mexican manufacturer might expect to save roughly \$70,000 on a \$1,000,000 contract with an American buyer by avoiding adverse currency movements. Clearly, accurately predicting exchange rates can help business leaders make more informed decisions.
 
 Future work on this problem might consider different countries or variables. Since the countries chosen for this paper are major US trading partners, their exchange rates are closely related to US economic indicators. It may be more difficult to model exchange rates for large countries that trade proportionally less with the US, such as India. In addition, new variables could be considered in future work. In particular, exchange rates are sensitive to the perception of market participants. While the impact of this is more significant in the short term, it may be interesting to consider whether it persists for longer time intervals. In all, while we achieved our primary goals in this paper, predicting exchange rates is complex and ripe for continued research.  
 
