Principal Component Graphs Added

--- a/Results/principal_components.ipynb
+++ b/Results/principal_components.ipynb
@@ -121,6 +121,12 @@
    "source": [
     "setwd('C:/Users/Eddie/Documents/GitHub/ML-Ex-Rates/Results')\n",
     "\n",
+    "canada <- 0\n",
+    "europe <- 0\n",
+    "mexico <- 0\n",
+    "japan <- 0\n",
+    "korea <- 0\n",
+    "\n",
     "principal_components <- function(country) {\n",
     "    \n",
     "    full <- read.csv(paste(country,'_full.csv',sep=''))\n",
@@ -132,6 +138,7 @@
     "    plot(prinComps,type=\"lines\") \n",
     "   \n",
     "}\n",
+    "\n",
     "print(\"cananda\")\n",
     "principal_components(\"canada\")\n",
     "\n",
@@ -146,6 +153,95 @@
     "\n",
     "print(\"korea\")\n",
     "principal_components(\"korea\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
+      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
+      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
+      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error in as.data.frame.default(x[[i]], optional = TRUE): cannot coerce class \"\"loadings\"\" to a data.frame\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in as.data.frame.default(x[[i]], optional = TRUE): cannot coerce class \"\"loadings\"\" to a data.frame\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>pdf:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{pdf:} 2"
+      ],
+      "text/markdown": [
+       "**pdf:** 2"
+      ],
+      "text/plain": [
+       "pdf \n",
+       "  2 "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "library(ggplot2)\n",
+    "xVals <- rbind(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21)\n",
+    "\n",
+    "canadaFull <- read.csv('canada_full.csv')\n",
+    "canadaFull <-canadaFull[,-1]\n",
+    "rownames(canadaFull) <- 1:nrow(canadaFull)\n",
+    "canadaComps <- cbind(xVals,princomp(canadaFull, cor=TRUE),rep('Canada',21))\n",
+    "\n",
+    "europeFull <- read.csv('europe_full.csv')\n",
+    "europeFull <-europeFull[,-1]\n",
+    "rownames(europeFull) <- 1:nrow(europeFull)\n",
+    "europeComps <- cbind(xVals,princomp(europeFull, cor=TRUE),rep('Europoe',21))\n",
+    "\n",
+    "mexicoFull <- read.csv('mexico_full.csv')\n",
+    "mexicoFull <-mexicoFull[,-1]\n",
+    "rownames(mexicoFull) <- 1:nrow(mexicoFull)\n",
+    "mexicoComps <- cbind(xVals,princomp(mexicoFull, cor=TRUE),rep('Mexico',21))\n",
+    "\n",
+    "japanFull <- read.csv('japan_full.csv')\n",
+    "japanFull <-japanFull[,-1]\n",
+    "rownames(japanFull) <- 1:nrow(japanFull)\n",
+    "japanComps <- cbind(xVals,princomp(japanFull, cor=TRUE),rep('Japan',21))\n",
+    "\n",
+    "koreaFull <- read.csv('korea_full.csv')\n",
+    "koreaFull <-koreaFull[,-1]\n",
+    "rownames(koreaFull) <- 1:nrow(koreaFull)\n",
+    "koreaComps <- cbind(xVals,princomp(koreaFull, cor=TRUE),rep('Korea',21))\n",
+    "\n",
+    "df1 <- data.frame(rbind(canadaComps,europeComps,mexicoComps,\n",
+    "                       japanComps,koreaComps))\n",
+    "colnames(df1) <- cbind('Components','Value','Country')\n",
+    "\n",
+    "pdf('prinComps.pdf')\n",
+    "ggplot(data = df1, aes(x = Components, y=Value,\n",
+    "        group = Country, colour = Country))+\n",
+    "    geom_line() +\n",
+    "    xlab('Component') + \n",
+    "    ylab('Score') +\n",
+    "    theme(legend.justification = c(1,1), legend.position = c(1,1))\n",
+    "dev.off()\n"
    ]
   },
   {
