Principal Component Graphs Added

--- a/Results/principal_components.ipynb
+++ b/Results/principal_components.ipynb
@@ -121,11 +121,6 @@
    "source": [
     "setwd('C:/Users/Eddie/Documents/GitHub/ML-Ex-Rates/Results')\n",
     "\n",
-    "canada <- 0\n",
-    "europe <- 0\n",
-    "mexico <- 0\n",
-    "japan <- 0\n",
-    "korea <- 0\n",
     "\n",
     "principal_components <- function(country) {\n",
     "    \n",
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -166,18 +161,103 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
-      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
-      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n",
-      "Don't know how to automatically pick scale for object of type list. Defaulting to continuous\n"
+      "Warning message:\n",
+      "In cbind(xVals, princomp(canadaFull, cor = TRUE)$sdev, rep(\"Canada\", : number of rows of result is not a multiple of vector length (arg 2)"
      ]
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error in as.data.frame.default(x[[i]], optional = TRUE): cannot coerce class \"\"loadings\"\" to a data.frame\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in as.data.frame.default(x[[i]], optional = TRUE): cannot coerce class \"\"loadings\"\" to a data.frame\n"
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tbody>\n",
+       "\t<tr><td>1              </td><td>6.1804867498682</td><td>Canada         </td></tr>\n",
+       "\t<tr><td>2               </td><td>3.85167169491586</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>3               </td><td>3.23019283049083</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>4               </td><td>2.36301884932534</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>5               </td><td>1.59685494125996</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>6               </td><td>1.41698346767213</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>7               </td><td>1.23745148308993</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>8               </td><td>1.16140083458221</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>9               </td><td>1.04723815404711</td><td>Canada          </td></tr>\n",
+       "\t<tr><td>10              </td><td>0.84710364244461</td><td>Canada          </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{lll}\n",
+       "\t 1               & 6.1804867498682 & Canada         \\\\\n",
+       "\t 2                & 3.85167169491586 & Canada          \\\\\n",
+       "\t 3                & 3.23019283049083 & Canada          \\\\\n",
+       "\t 4                & 2.36301884932534 & Canada          \\\\\n",
+       "\t 5                & 1.59685494125996 & Canada          \\\\\n",
+       "\t 6                & 1.41698346767213 & Canada          \\\\\n",
+       "\t 7                & 1.23745148308993 & Canada          \\\\\n",
+       "\t 8                & 1.16140083458221 & Canada          \\\\\n",
+       "\t 9                & 1.04723815404711 & Canada          \\\\\n",
+       "\t 10               & 0.84710364244461 & Canada          \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "1. \"1\"\n",
+       "2. \"2\"\n",
+       "3. \"3\"\n",
+       "4. \"4\"\n",
+       "5. \"5\"\n",
+       "6. \"6\"\n",
+       "7. \"7\"\n",
+       "8. \"8\"\n",
+       "9. \"9\"\n",
+       "10. \"10\"\n",
+       "11. \"6.1804867498682\"\n",
+       "12. \"3.85167169491586\"\n",
+       "13. \"3.23019283049083\"\n",
+       "14. \"2.36301884932534\"\n",
+       "15. \"1.59685494125996\"\n",
+       "16. \"1.41698346767213\"\n",
+       "17. \"1.23745148308993\"\n",
+       "18. \"1.16140083458221\"\n",
+       "19. \"1.04723815404711\"\n",
+       "20. \"0.84710364244461\"\n",
+       "21. \"Canada\"\n",
+       "22. \"Canada\"\n",
+       "23. \"Canada\"\n",
+       "24. \"Canada\"\n",
+       "25. \"Canada\"\n",
+       "26. \"Canada\"\n",
+       "27. \"Canada\"\n",
+       "28. \"Canada\"\n",
+       "29. \"Canada\"\n",
+       "30. \"Canada\"\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      [,1] [,2]               [,3]    \n",
+       " [1,] \"1\"  \"6.1804867498682\"  \"Canada\"\n",
+       " [2,] \"2\"  \"3.85167169491586\" \"Canada\"\n",
+       " [3,] \"3\"  \"3.23019283049083\" \"Canada\"\n",
+       " [4,] \"4\"  \"2.36301884932534\" \"Canada\"\n",
+       " [5,] \"5\"  \"1.59685494125996\" \"Canada\"\n",
+       " [6,] \"6\"  \"1.41698346767213\" \"Canada\"\n",
+       " [7,] \"7\"  \"1.23745148308993\" \"Canada\"\n",
+       " [8,] \"8\"  \"1.16140083458221\" \"Canada\"\n",
+       " [9,] \"9\"  \"1.04723815404711\" \"Canada\"\n",
+       "[10,] \"10\" \"0.84710364244461\" \"Canada\""
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "In cbind(xVals, princomp(europeFull, cor = TRUE)$sdev, rep(\"Europoe\", : number of rows of result is not a multiple of vector length (arg 2)Warning message:\n",
+      "In cbind(xVals, princomp(mexicoFull, cor = TRUE)$sdev, rep(\"Mexico\", : number of rows of result is not a multiple of vector length (arg 2)Warning message:\n",
+      "In cbind(xVals, princomp(japanFull, cor = TRUE)$sdev, rep(\"Japan\", : number of rows of result is not a multiple of vector length (arg 2)Warning message:\n",
+      "In cbind(xVals, princomp(koreaFull, cor = TRUE)$sdev, rep(\"Korea\", : number of rows of result is not a multiple of vector length (arg 2)"
      ]
     },
     {
@@ -196,50 +276,54 @@
        "  2 "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "library(ggplot2)\n",
-    "xVals <- rbind(1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21)\n",
+    "xVals <- rbind(1,2,3,4,5,6,7,8,9,10)\n",
     "\n",
     "canadaFull <- read.csv('canada_full.csv')\n",
     "canadaFull <-canadaFull[,-1]\n",
     "rownames(canadaFull) <- 1:nrow(canadaFull)\n",
-    "canadaComps <- cbind(xVals,princomp(canadaFull, cor=TRUE),rep('Canada',21))\n",
+    "canadaComps <- cbind(xVals,princomp(canadaFull, cor=TRUE)$sdev,rep('Canada',10))\n",
+    "canadaComps\n",
     "\n",
     "europeFull <- read.csv('europe_full.csv')\n",
     "europeFull <-europeFull[,-1]\n",
     "rownames(europeFull) <- 1:nrow(europeFull)\n",
-    "europeComps <- cbind(xVals,princomp(europeFull, cor=TRUE),rep('Europoe',21))\n",
+    "europeComps <- cbind(xVals,princomp(europeFull, cor=TRUE)$sdev,rep('Europoe',10))\n",
     "\n",
     "mexicoFull <- read.csv('mexico_full.csv')\n",
     "mexicoFull <-mexicoFull[,-1]\n",
     "rownames(mexicoFull) <- 1:nrow(mexicoFull)\n",
-    "mexicoComps <- cbind(xVals,princomp(mexicoFull, cor=TRUE),rep('Mexico',21))\n",
+    "mexicoComps <- cbind(xVals,princomp(mexicoFull, cor=TRUE)$sdev,rep('Mexico',10))\n",
     "\n",
     "japanFull <- read.csv('japan_full.csv')\n",
     "japanFull <-japanFull[,-1]\n",
     "rownames(japanFull) <- 1:nrow(japanFull)\n",
-    "japanComps <- cbind(xVals,princomp(japanFull, cor=TRUE),rep('Japan',21))\n",
+    "japanComps <- cbind(xVals,princomp(japanFull, cor=TRUE)$sdev,rep('Japan',10))\n",
     "\n",
     "koreaFull <- read.csv('korea_full.csv')\n",
     "koreaFull <-koreaFull[,-1]\n",
     "rownames(koreaFull) <- 1:nrow(koreaFull)\n",
-    "koreaComps <- cbind(xVals,princomp(koreaFull, cor=TRUE),rep('Korea',21))\n",
+    "koreaComps <- cbind(xVals,princomp(koreaFull, cor=TRUE)$sdev,rep('Korea',10))\n",
     "\n",
     "df1 <- data.frame(rbind(canadaComps,europeComps,mexicoComps,\n",
     "                       japanComps,koreaComps))\n",
     "colnames(df1) <- cbind('Components','Value','Country')\n",
     "\n",
+    "df1$Value <- as.numeric(as.character(df1$Value))\n",
+    "df1$Components <- as.numeric(as.character(df1$Components))\n",
+    "\n",
     "pdf('prinComps.pdf')\n",
-    "ggplot(data = df1, aes(x = Components, y=Value,\n",
+    "ggplot(data = df1, aes(x=Components, y=Value,\n",
     "        group = Country, colour = Country))+\n",
     "    geom_line() +\n",
     "    xlab('Component') + \n",
-    "    ylab('Score') +\n",
+    "    ylab('Variance') +\n",
     "    theme(legend.justification = c(1,1), legend.position = c(1,1))\n",
     "dev.off()\n"
    ]
