Principal Component Graphs Added

--- a/Results/principal_components.ipynb
+++ b/Results/principal_components.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +245,7 @@
        "[10,] \"10\" \"0.84710364244461\" \"Canada\""
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -276,7 +276,7 @@
        "  2 "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +323,9 @@
     "        group = Country, colour = Country))+\n",
     "    geom_line() +\n",
     "    xlab('Component') + \n",
-    "    ylab('Variance') +\n",
-    "    theme(legend.justification = c(1,1), legend.position = c(1,1))\n",
+    "    ylab('Standard Deviation') +\n",
+    "    theme(legend.justification = c(1,1), legend.position = c(1,1)) +\n",
+    "    \n",
     "dev.off()\n"
    ]
   },
